--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,13 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "sBIC"]
+	path = sBIC
+	url = https://github.com/lucaweihs/sbic
+	shallow = true
+	registered = true
+[submodule "SEMID"]
+	path = SEMID
+	url = https://github.com/lucaweihs/semid
+	shallow = true
+	registered = true
